# livox_mid360

./: fix_livox_sdk2_ubuntu2404.txt  livox_log.txt  logger  logger.cpp  main  main.cpp  mid360_config.json  mid360_test_connection.cpp
Save_pcd_file/: CMakeLists.txt  save_data_pcd.cpp
cloud_point_visualization/: CMakeLists.txt  cloud_point_viewer.cpp
